--- a/scss/ccs_colores_01.scss
+++ b/scss/ccs_colores_01.scss
@@ -117,3 +117,473 @@ body {
     }
 }
 /* MODALS BASE */
+
+
+/* MODALS PASO 01 CARRO */
+
+$modal_carro_promo_background: "#f5f5f5";
+$modal_carro_border_color: "#ddd";
+
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo{
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .process_carro {
+                                    .process_carro_promo{
+                                        background: $modal_carro_promo_background;
+                                        .promo_info{}
+                                        .promo_precio{}
+                                        .promo_delete{}
+                                        .promo_detalle{
+                                            .promo_detalle_item{
+                                                .promo_detalle_nombre{}
+                                                .promo_detalle_acciones{
+                                                    .accion{}
+                                                }
+                                            }
+                                        }
+                                    }
+                                    .process_carro_restantes{
+                                        .restantes_detalle_item{
+                                            border-bottom-color: $modal_carro_border_color;
+                                            .restantes_detalle_nombre{}
+                                            .restantes_detalle_acciones{
+                                                .precio{}
+                                                .espacio{}
+                                                .pregunta{}
+                                                .accion{}
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                            .padding_01 {}
+                            .padding_02 {}
+                        }
+                        .sub_total {
+                            .cont_subtotal {
+                                .total_detalle{
+                                    .paso_01_sub_total{}
+                                    .paso_03_costo{}
+                                    .paso_03_total{}
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* MODALS PASO 01 CARRO */
+
+/* MODALS PASO 02 CARRO */
+
+$modal_carro_tipo_color: "#ddd";
+$modal_carro_tipo_alert: "#900";
+
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_02 {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_direccion {
+                                    .direccion_opciones {
+                                        .dir_op{
+                                            background: $modal_carro_tipo_color;
+                                            .codir{
+                                                .cont_info_dir {
+                                                    .title{}
+                                                    .stitle{}
+                                                    .alert{ color: $modal_carro_tipo_alert }
+                                                }
+                                            }
+                                        }
+                                        .rlocal{}
+                                        .cdesp{}
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 02 CARRO */
+
+
+
+/* MODALS PASO 02A LOCALES CARRO */
+
+$modal_local_map_color: "#ddd";
+
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_02a {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_direccion {
+                                    .direccion_op1 {
+                                        .parent_locales {
+                                            .dir_locales {
+                                                .cont_local {
+                                                    .left_acciones {
+                                                        .local_info {
+                                                            .title{}
+                                                            .stitle{}
+                                                            .alert{}
+                                                        }
+                                                    }
+                                                    .accioness {
+                                                        .accion{}
+                                                        .ver_mapa{}
+                                                        .ver_whats{}
+                                                        .ver_tel{}
+                                                    }
+                                                }
+                                            }
+                                            .cont_map {
+                                                background: $modal_local_map_color;
+                                                .dir_map{}
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 02A LOCALES CARRO */
+
+
+/* MODALS PASO 02B LOCALES CARRO */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_02b {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_direccion {
+                                    height: 100%;
+                                    .direccion_op2 {
+                                        height: 100%;
+                                        #map_direccion{
+                                            height: 100%;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            display: none;
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 02B LOCALES CARRO */
+
+
+
+/* MODALS PASO 3 DATA */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_03 {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_final {
+                                    .block_direccion {
+                                        .item_direccion {
+                                            h1{}
+                                            h2{}
+                                        }
+                                        .item_numero {
+                                            h1{}
+                                            h2{}
+                                        }
+                                        .item_depto {
+                                            h1{}
+                                            input{}
+                                        }
+                                    }
+                                    .block_nombre_telefono {
+                                        .item_nombre {
+                                            h1{}
+                                            input{}
+                                        }
+                                        .item_telefono {
+                                            h1{}
+                                            input{}
+                                        }
+                                    }
+                                    .block_preguntas {
+                                        h1{}
+                                        .preguntas {
+                                            .pregunta {
+                                                .pre_nom{}
+                                                .pre_input {
+                                                    input{}
+                                                }
+                                                textarea{}
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .sub_total {
+                            .cont_subtotal {
+                                .total_detalle{
+                                    .paso_01_sub_total{}
+                                    .paso_03_costo{}
+                                    .paso_03_total{}
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 3 DATA */
+
+
+
+/* MODALS PASO 4 LOCALES CARRO */
+
+$modal_final_mensaje_background: "#fcc";
+$modal_final_mensaje_color: "#600";
+$modal_final_cont_background: "#ddd";
+$modal_final_btn_chat_background: "#999";
+$modal_final_btn_chat_color: "#fff";
+$modal_final_chat_background: "#fff";
+
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_04 {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .data_final {
+                                    .pedido_mensaje{
+                                        background: $modal_final_mensaje_background;
+                                        color: $modal_final_mensaje_color;
+                                    }
+                                    .pedido_final {
+                                        background: $modal_final_cont_background;
+                                        .cont_pedido {
+                                            .estado {
+                                                h1{}
+                                                h2{}
+                                            }
+                                            .tiempo {
+                                                h1{}
+                                                h2{} 
+                                            }
+                                        }
+                                        .posicion{}
+                                        .total{}
+                                    }
+                                    .titulo_chat{}
+                                    .pedido_chat {
+                                        .mensajes {
+                                            background: $modal_final_chat_background;
+                                            .info_mensajes{}
+                                        }
+                                        .entrada {
+                                            input{}
+                                        }
+                                        .enviar {
+                                            .enviar_txt {
+                                                background: $modal_final_btn_chat_background;
+                                                color: $modal_final_btn_chat_color;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 4 LOCALES CARRO */
+
+
+
+/* MODALS PASO PREGUNTAS */
+
+$modal_preguntas_border_color: "#ccc";
+$modal_preguntas_selected_color: "#ccc";
+
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_pregunta_productos {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .s_pregunta {
+                                    .e_pregunta {
+                                        .pregunta_titulo{}
+                                        .titulo_v_pregunta{}
+                                        .v_pregunta{
+                                            border-top-color: $modal_preguntas_border_color;
+                                            border-left-color: $modal_preguntas_border_color;
+                                            border-right-color: $modal_preguntas_border_color;
+                                            .n_pregunta{
+                                                border-bottom-color: $modal_preguntas_border_color;
+                                            }
+                                            .selected{
+                                                background: $modal_preguntas_selected_color;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO PREGUNTAS */
+
+
+
+/* MODALS PASO PROMOCION */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_productos_promo {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .pro_cat_promo {
+                                    .pro_cat_item {
+                                        .pro_cat_item_select {
+                                            select{}
+                                        }
+                                        .pro_cat_item_nombre{}
+                                        .pro_cat_item_descripcion{}
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO PROMOCION */
