--- a/scss/ccs_fontsize_01.scss
+++ b/scss/ccs_fontsize_01.scss
@@ -63,7 +63,8 @@ $modal_global_subtitulo: "20px";
 $modal_subtotal: "20px";
 $modal_costo: "20px";
 $modal_total: "20px";
-$modal_confirmar: "16px"
+$modal_confirmar: "16px";
+
 /* MODALS BASE */
 body {
     .contenedor {
@@ -100,3 +101,450 @@ body {
     }
 }
 /* MODALS BASE */
+
+
+/* MODALS PASO 01 CARRO */
+
+$modal_carro_promo_titulo: "22px";
+$modal_carro_promo_precio: "22px";
+$modal_carro_promo_nombre: "16px";
+$modal_carro_restantes_nombre: "18px";
+$modal_carro_restantes_precio: "18px";
+
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo{
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .process_carro {
+                                    .process_carro_promo{
+                                        .promo_info{
+                                            font-size: $modal_carro_promo_titulo;
+                                        }
+                                        .promo_precio{
+                                            font-size: $modal_carro_promo_precio;
+                                        }
+                                        .promo_delete{}
+                                        .promo_detalle{
+                                            .promo_detalle_item{
+                                                .promo_detalle_nombre{
+                                                    font-size: $modal_carro_promo_nombre;
+                                                }
+                                                .promo_detalle_acciones{
+                                                    .accion{}
+                                                }
+                                            }
+                                        }
+                                    }
+                                    .process_carro_restantes{
+                                        .restantes_detalle_item{
+                                            .restantes_detalle_nombre{
+                                                font-size: $modal_carro_restantes_nombre;
+                                            }
+                                            .restantes_detalle_acciones{
+                                                .precio{ font-size: $modal_carro_restantes_precio; }
+                                                .espacio{}
+                                                .pregunta{}
+                                                .accion{}
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                            .padding_01 {}
+                            .padding_02 {}
+                        }
+                        .sub_total {
+                            .cont_subtotal {
+                                .total_detalle{
+                                    .paso_01_sub_total{}
+                                    .paso_03_costo{}
+                                    .paso_03_total{}
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* MODALS PASO 01 CARRO */
+
+/* MODALS PASO 02 CARRO */
+
+$modal_dir_titulo: "20px";
+$modal_dir_subtitulo: "18px";
+$modal_dir_alert: "16px";
+
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_02 {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_direccion {
+                                    .direccion_opciones {
+                                        .dir_op {
+                                            .codir {
+                                                .cont_info_dir{
+                                                    .title { font-size: $modal_dir_titulo; }
+                                                    .stitle { font-size: $modal_dir_subtitulo; }
+                                                    .alert { font-size: $modal_dir_alert; }
+                                                }
+                                            }
+                                        }
+                                        .rlocal{}
+                                        .cdesp{}
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 02 CARRO */
+
+
+/* MODALS PASO 02A LOCALES CARRO */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_02a {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_direccion {
+                                    .direccion_op1 {
+                                        .parent_locales {
+                                            .dir_locales {
+                                                .cont_local {
+                                                    .left_acciones {
+                                                        .local_info {
+                                                            .title{}
+                                                            .stitle{}
+                                                            .alert{}
+                                                        }
+                                                    }
+                                                    .accioness {
+                                                        .accion{}
+                                                        .ver_mapa{}
+                                                        .ver_whats{}
+                                                        .ver_tel{}
+                                                    }
+                                                }
+                                            }
+                                            .cont_map {
+                                                .dir_map{}
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 02A LOCALES CARRO */
+
+
+/* MODALS PASO 02B LOCALES CARRO */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_02b {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_direccion {
+                                    height: 100%;
+                                    .direccion_op2 {
+                                        height: 100%;
+                                        #map_direccion{
+                                            height: 100%;
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            display: none;
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 02B LOCALES CARRO */
+
+
+
+/* MODALS PASO 3 DATA */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_03 {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .cont_final {
+                                    .block_direccion {
+                                        .item_direccion {
+                                            h1{}
+                                            h2{}
+                                        }
+                                        .item_numero {
+                                            h1{}
+                                            h2{}
+                                        }
+                                        .item_depto {
+                                            h1{}
+                                            input{}
+                                        }
+                                    }
+                                    .block_nombre_telefono {
+                                        .item_nombre {
+                                            h1{}
+                                            input{}
+                                        }
+                                        .item_telefono {
+                                            h1{}
+                                            input{}
+                                        }
+                                    }
+                                    .block_preguntas {
+                                        h1{}
+                                        .preguntas {
+                                            .pregunta {
+                                                .pre_nom{}
+                                                .pre_input {
+                                                    input{}
+                                                }
+                                                textarea{}
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .sub_total {
+                            .cont_subtotal {
+                                .total_detalle{
+                                    .paso_01_sub_total{}
+                                    .paso_03_costo{}
+                                    .paso_03_total{}
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 3 DATA */
+
+
+
+/* MODALS PASO 4 LOCALES CARRO */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .paso_04 {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .data_final {
+                                    .pedido_mensaje{}
+                                    .pedido_final {
+                                        .cont_pedido {
+                                            .estado {
+                                                h1{}
+                                                h2{}
+                                            }
+                                            .tiempo {
+                                                h1{}
+                                                h2{} 
+                                            }
+                                        }
+                                        .posicion{}
+                                        .total{}
+                                    }
+                                    .titulo_chat{}
+                                    .pedido_chat {
+                                        .mensajes {
+                                            .info_mensajes{}
+                                        }
+                                        .entrada {
+                                            input{}
+                                        }
+                                        .enviar {
+                                            .enviar_txt{}
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO 4 LOCALES CARRO */
+
+
+
+/* MODALS PASO PREGUNTAS */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_pregunta_productos {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .s_pregunta {
+                                    .e_pregunta {
+                                        .pregunta_titulo{}
+                                        .titulo_v_pregunta{}
+                                        .v_pregunta{
+                                            .n_pregunta{}
+                                            .selected{}
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO PREGUNTAS */
+
+
+
+/* MODALS PASO PROMOCION */
+body {
+    .contenedor {
+        .modals{
+            .cont_modals {
+                .modal_productos_promo {
+                    .cont_modal {
+                        .titulo {
+                            .cont_titulo {
+                                h1{}
+                                h2{}
+                            }
+                        }
+                        .close {}
+                        .cont_info {
+                            .info_modal {
+                                .pro_cat_promo {
+                                    .pro_cat_item {
+                                        .pro_cat_item_select {
+                                            select{}
+                                        }
+                                        .pro_cat_item_nombre{}
+                                        .pro_cat_item_descripcion{}
+                                    }
+                                }
+                            }
+                        }
+                        .acciones {
+                            .confirmar{}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+/* MODALS PASO PROMOCION */
